[package]
name = "code-steps"
version = "0.1.0"
edition = "2024"
description = "Notebook-style code step display with syntax highlighting, breakpoints, and theme support for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/code-steps"
keywords = ["notebook", "syntax-highlighting", "terminal", "cli", "educational"]
categories = ["command-line-interface", "development-tools"]
readme = "README.md"

[package.metadata.code-steps]
theme = "ayu-dark"

[dependencies]
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
code-steps-macros = { path = "code-steps-macros" }

[build-dependencies]
toml = "0.8"
