[package]
name = "code-steps-macros"
version = "0.1.1"
edition = "2024"
description = "Proc macros for code-steps: notebook-style step display in the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FleetingLore/laer"
keywords = ["notebook", "macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
